[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://StartMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://InstructionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://CreditsMenu.tscn" type="PackedScene" id=5]

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="StartMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="InstructionsMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CreditsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="credits" from="MainMenu" to="." method="_on_MainMenu_credits"]
[connection signal="instructions" from="MainMenu" to="." method="_on_MainMenu_instructions"]
[connection signal="options" from="MainMenu" to="." method="_on_MainMenu_options"]
[connection signal="start" from="MainMenu" to="." method="_on_MainMenu_start"]
[connection signal="back" from="StartMenu" to="." method="_on_StartMenu_back"]
[connection signal="start_game" from="StartMenu" to="." method="_on_StartMenu_start_game"]
[connection signal="back" from="InstructionsMenu" to="." method="_on_InstructionsMenu_back"]
[connection signal="back" from="CreditsMenu" to="." method="_on_CreditsMenu_back"]
